@@ -1,1 +1,6 @@
 SUBDIRS=src doc
+
+messages:
+	$(XGETTEXT) $(srcdir)/src/*.cpp $(srcdir)/src/*.h -o $(podir)/kabcclient.pot
+
+	
